# studio

./: .editorconfig  .generatelicensefile  .gitignore  .gitmodules  .madgerc  .prettierignore  CONTRIB.TXT  Java Program to find Smallest Number in an Array  README.md  THIRD-PARTY-LICENSES.TXT  ate_boilerplate.eez-project  babel.config.json  build-dev-bundle.js  build-release-bundle.js  build-web-studio.js  build_viewer_bundle.js  build_web_studio.js  docker-build.sh  docker-start.sh  eezstudio.desktop  entitlements.mac.plist  flake.nix  gulpfile.js  icon.icns  notes.md  npm-module-publish.js  package-lock.json  package.json  tsconfig.dev.json  tsconfig.json  tslint.json  watch-less.js  wipe-dependencies.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
LICENSES/: MIT.txt
docs/: Loop_Action_v2.odt  charts.drawio  charts.md
docs/draft/: overview.md
docs/odt-template/: layout-cache  meta.xml  settings.xml  styles.xml
docs/reference guide/: .~lock.3. EEZ Studio reference guide (Actions).odm#  1. EEZ Studio reference guide (Common).odm  2. EEZ Studio reference guide (Projects).odm  3. EEZ Studio reference guide (Actions).odm  4. EEZ Studio reference guide (Widgets).odm  5. EEZ Studio reference guide (Instruments).odm  6. EEZ Studio reference guide-last.odm  A0. EEZ Studio Actions.odt  C1. EEZ Studio legal information.odt  C4. EEZ Studio features.odt  C5. Settings and menu options.odt  EEZ Studio reference guide - blank page.odt  EEZ Studio reference guide - last page.odt  EEZ Studio reference guide - start page.odt  I1. Instruments.odt  I2. Instrument activity bar.odt  P1. projects.odt  P11. Fonts.odt  P12. Texts.odt  P13. Settings.odt  P2. project editor.odt  P3. Project editor modes.odt  P4. Project editor panels.odt  P7. Project editing.odt  P8. Variables.odt  W0. EEZ Studio Widgets.odt
docs/tutorial/: Animation.eez-project  DelayTest.eez-project  MultiLanguage-Dashboard.eez-project  MultiLanguage-Embedded-gui.eez-project  MultiLanguage-Embedded.eez-project  ScreenCapture.eez-project  SerialPort.eez-project  Test.eez-dashboard  Test.eez-project  TextInput.eez-project  Variables.eez-project  ate_boilerplate.eez-project  dcp_ate.eez-project  dcp_ate.eez-project-runtime-settings  embedded-line-chart-gui.eez-project  embedded-line-chart.eez-project  qr-code-dashboard.eez-project  qr-code-embedded-gui.eez-project  qr-code-embedded.eez-project  smart-home-low-res.eez-project
docs/user manual/: 1. EEZ Studio legal information.odt  10. Project editor modes.odt  11. Project editor panels.odt  12. Project editors and viewers.odt  13. EEZ Flow.odt  14. Project editing.odt  15. Variables.odt  2. EEZ Studio overview.odt  3. EEZ Studio installation.odt  4. EEZ Studio features.odt  5. Settings and menu options.odt  6. Instruments.odt  7. Instrument activity bar.odt  8. projects.odt  9. project editor.odt  C2. EEZ Studio overview.odt  C3. EEZ Studio installation.odt  C4. EEZ Studio features.odt  C5. Settings and menu options.odt  EEZ Studio user manual - Instrument.odt  EEZ Studio user manual - blank page.odt  EEZ Studio user manual - last page.odt  EEZ Studio user manual - project.odt  EEZ Studio user manual - start page.odt  EEZ Studio user manual-1.odm  EEZ Studio user manual-2.odm  EEZ Studio user manual-3.odm  EEZ Studio user manual-4.odm  EEZ Studio user manual.odm  I0. EEZ Studio Instrument.odt  I1. Instruments.odt  I2. Instrument activity bar.odt  P0. EEZ Studio Project.odt  P1. projects.odt  P10. Bitmaps.odt  P11. Fonts.odt  P13. Settings.odt  P2. project editor.odt  P3. Project editor modes.odt  P4. Project editor panels.odt  (+5 more)
extensions/: build-catalog.ts  catalog-enum.ts  catalog-version.json  catalog.json  globals.d.ts  tsconfig.dev.json
extensions/advanced-measurements/: advanced-measurements-extension.ts  package.json  rms.ts
help/en-US/: page-editor.md
installation/: .gitignore  build-installation-new.ts  build-installation.ts  build.js  extra-resource.json  extra-resource.ts  init_storage.db  linux_deb_options.json  linux_options_deb.json  linux_options_rpm.json  mac-dist-check.sh  make-electron-builder-yml.ts  notarize.js  notarize2.js  tsconfig.json  win32_installation_script.iss
installation/extra-resources/: catalog-version.json  catalog.json
instruments/: .gitignore
instruments/generic_scpi/: generic_scpi.eez-project
instruments/rigol_ds1000b/: rigol_ds1000b.eez-project
instruments/rigol_ds1000d_e/: rigol_ds1000d_e.eez-project
instruments/rigol_ds_mso_1000/: rigol_ds_mso_1000.eez-project
libs/: component-doc.js  jquery-2.2.3.min.js  jquery.event.drag-2.2.min.js  jquery.visible.min.js  opentype.min.js  package.json
libs/brace-0.8.0/: index.min.js
libs/freetype-tools-wasm/: freetype-tools.js  freetype-tools.wasm
libs/licenses/: Free FFT and convolution.txt  LVGL_9.0.txt  QR Code generator library.txt  brace@0.11.1.txt  lv_drivers.txt  lv_img_conv.txt  pdfjs.txt  pngquant.txt  trix.txt  yarn@1.22.10.txt
nix/: eez-studio.nix  electron-lib.nix  node_modules.nix
nix/extra-resources/: default.nix  extensions.nix
nix/patches/: 0001-return-prefetched-file-data.patch  0002-use-custom-resources-path.patch
npm-module/: package.json
resources/: expression-grammar.pegjs
resources/docker-build/: Dockerfile  docker-compose.yml
resources/eez-framework-amalgamation/: eez-flow-lz4.c  eez-flow-sha256.c  eez-flow.cpp  eez-flow.h
resources/eez-gui-lite/: eez-gui-lite.c  eez-gui-lite.h
resources/lv_img_conv_9/: LVGLImage.py  README.md
resources/project-templates/: IEXT.eez-project  LVGL-8.3.eez-project  (+23 more)
src/: tsconfig.dev.json
wasm/: README.md
wasm/eez-runtime/: CMakeLists.txt  README.md  document.eez-project  eez-framework-conf.h  main.cpp
wasm/eez-runtime/gui/: app_context.cpp  document.cpp  document.h  keypad.cpp
wasm/eez-runtime/platform/simulator/emscripten/: pre.js
wasm/lvgl-runtime/v8.3/: CMakeLists.txt  exported-functions-lvgl.txt  exported-functions-misc.txt  exported-functions.txt  gen-exported-functions.sh  lv_conf.h
wasm/lz4/: CMakeLists.txt  pre.js
(+1536 files in other folders)
